// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LoadingComponent should match snapshot with custom message 1`] = `
<div>
  <div
    class="MuiBox-root css-180zc0d"
  >
    <span
      class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1wxecgq-MuiCircularProgress-root"
      role="progressbar"
      style="width: 40px; height: 40px;"
    >
      <svg
        class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
          cx="44"
          cy="44"
          fill="none"
          r="20.2"
          stroke-width="3.6"
        />
      </svg>
    </span>
    <h3
      class="MuiTypography-root MuiTypography-h3 css-1nrr5le-MuiTypography-root"
    >
      Loading data...
    </h3>
  </div>
</div>
`;

exports[`LoadingComponent should match snapshot with default props 1`] = `
<div>
  <div
    class="MuiBox-root css-180zc0d"
  >
    <span
      class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1wxecgq-MuiCircularProgress-root"
      role="progressbar"
      style="width: 40px; height: 40px;"
    >
      <svg
        class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
          cx="44"
          cy="44"
          fill="none"
          r="20.2"
          stroke-width="3.6"
        />
      </svg>
    </span>
    <h3
      class="MuiTypography-root MuiTypography-h3 css-1nrr5le-MuiTypography-root"
    >
      Loading...
    </h3>
  </div>
</div>
`;
